kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: socks.isaacmamman.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: grafana.isaacmamman.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    - host: prometheus.isaacmamman.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
          
            
              
    # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #   - hosts:
    #     - www.example.com
    #     secretName: example-tls
